--- a/ventana2.ui
+++ b/ventana2.ui
@@ -531,6 +531,9 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
          </item>
          <item>
           <widget class="QPushButton" name="pushButton">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>Iniciar</string>
            </property>
@@ -541,7 +544,7 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
        <item>
         <widget class="QPlainTextEdit" name="plainTextEdit">
          <property name="enabled">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="readOnly">
           <bool>true</bool>
@@ -553,7 +556,7 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
      <item>
       <widget class="QTableWidget" name="tableWidget">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
